--- a/samples/TestAllFunctions/TestAllFunctions/en.lproj/MainStoryboard.storyboard
+++ b/samples/TestAllFunctions/TestAllFunctions/en.lproj/MainStoryboard.storyboard
@@ -97,7 +97,7 @@
                                     <constraint firstAttribute="width" constant="226" id="lvF-DM-tXz"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="使い方 &amp; ドキュメントを開く">
+                                <state key="normal" title="使い方">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
